# qt-jxl-image-plugin

./: CMakeLists.txt  README.md  qjxlhandler.cpp  qjxlhandler.h  qjxlplugin.cpp  qt-jxl-image-plugin.json
